# air001-cmake

./: .gitmodules  CMakeLists.txt  README.md  ldscript.ld
config/: air001xx_hal_conf.h
main/: air001_it.c  main.c  main.h  syscalls.c
